# Highload-Homework-1

./: .gitignore  CMakeLists.txt  Makefile  README.md  settings.cfg
FS/: FileTypes.cpp  FileTypes.h  fileTypes.h  paths.cpp  paths.h
HTTP/: Handler.cpp  Handler.h  MIMETypes.cpp  MIMETypes.h  Methods.cpp  Methods.h  Request.cpp  Request.h  Response.cpp  Response.h  StatusCodes.cpp  StatusCodes.h  URLPaths.cpp  URLPaths.h  Versions.cpp  Versions.h  handler.cpp  handler.h  handlers.cpp  handlers.h  headers.cpp  headers.h
main/: Configuration.cpp  Configuration.h  main.cpp  utils.h
server/: Buffer.cpp  Buffer.h  ClientInstance.cpp  ClientInstance.h  HTTPResponse.h  Server.cpp  Server.h
